# sandbox

./: README.md  docker-compose.yaml  pnpm-lock.yaml
.github/workflows/: push-to-ghcr.yml  sdk-ci.yml  sdk-publish.yml  sdk-tests.yml
cli/: README.md  main.py  setup.py
cli/commands/: __init__.py  browser.py  file.py  jupyter.py  nodejs.py  root.py  shell.py
evaluation/: .env.example  README.md  README_zh.md  agent_loop.py  main.py  pyproject.toml
evaluation/agent_runtime/: README.md  _template.py  langchain_agent_loop.py  openai_sdk_loop.py
evaluation/aio_sandbox_eval/: __init__.py
evaluation/aio_sandbox_eval/agent/: __init__.py  abc.py  registry.py
evaluation/aio_sandbox_eval/agent/metrics/: __init__.py  metrics.py
evaluation/aio_sandbox_eval/agent/type/: __init__.py  exception.py  message.py  tool_result.py
evaluation/aio_sandbox_eval/cli/: __init__.py  utils.py
evaluation/aio_sandbox_eval/core/: __init__.py  config.py  runner.py
evaluation/aio_sandbox_eval/prompt/: eval_prompt.py
evaluation/aio_sandbox_eval/services/: __init__.py  evaluator.py  mcp_client.py  report.py  uploader.py
evaluation/dataset/: evaluation_workflow.xml
evaluation/result/20251112/langchain-glm-4.6-0.5/: evaluation_basic.md
evaluation/result/20251112/openai-glm-4.6-0.5/: evaluation_basic.md
evaluation/tests/: test_max_iterations_fallback.py  test_minimax_integration.py  test_openai_agent_loop.py
examples/: README.md
examples/_template/: README.md
examples/ag2-integration/: main.py  smoke_test.ipynb
website/: package.json  rspress.config.ts
(+192 files in other folders)
